--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Hubbe Pro: Lockdown Build v2.8</title>
+<title>Hubbe Garden</title>
 <style>
 :root { 
     --olive: #606C38; --dark: #283618; --cream: #FEFAE0; --rust: #BC6C25; 
@@ -13,19 +13,19 @@
 * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 body { margin: 0; height: 100dvh; display: flex; flex-direction: column; background: var(--cream); overflow: hidden; padding-top: env(safe-area-inset-top); color: #333; }
 
-header { background: var(--white); padding: 12px; border-bottom: 1px solid #ddd; z-index: 2000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-.header-top { display: flex; align-items: center; justify-content: space-between; gap: 10px; margin-bottom: 10px; }
-.logo { width: 38px; height: 38px; background: var(--olive); color: white; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-weight: 900; font-size: 1.4rem; flex-shrink: 0; box-shadow: 0 2px 4px rgba(0,0,0,0.2); }
+header { background: var(--white); padding: 8px 12px; border-bottom: 1px solid #ddd; z-index: 2000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
+.header-top { display: flex; align-items: center; justify-content: space-between; gap: 10px; margin-bottom: 6px; }
+.logo { width: 34px; height: 34px; background: var(--olive); color: white; border-radius: 12px; display: flex; align-items: center; justify-content: center; font-weight: 900; font-size: 1.4rem; flex-shrink: 0; box-shadow: 0 2px 4px rgba(0,0,0,0.2); }
 .room-controls { flex: 1; display: flex; align-items: center; gap: 6px; }
-.room-selector { flex: 1; padding: 10px; border-radius: 12px; border: 2px solid var(--olive); font-weight: bold; background: #fff; font-size: 0.9rem; outline: none; }
-.room-btn { background: var(--gray); border: 1px solid #ddd; border-radius: 10px; width: 38px; height: 38px; display: flex; align-items: center; justify-content: center; font-size: 1rem; cursor: pointer; transition: 0.2s; }
+.room-selector { flex: 1; padding: 6px 10px; border-radius: 10px; border: 2px solid var(--olive); font-weight: bold; background: #fff; font-size: 0.9rem; outline: none; }
+.room-btn { background: var(--gray); border: 1px solid #ddd; border-radius: 10px; width: 34px; height: 34px; display: flex; align-items: center; justify-content: center; font-size: 1rem; cursor: pointer; transition: 0.2s; }
 .room-btn:active { transform: scale(0.9); background: #e0e0e0; }
 
 .nav-bar { display: flex; background: var(--gray); padding: 4px; border-radius: 14px; gap: 4px; }
-.nav-tab { flex: 1; border: none; padding: 12px 5px; border-radius: 10px; font-weight: 800; color: #888; background: none; text-transform: uppercase; font-size: 0.7rem; letter-spacing: 0.5px; transition: 0.3s; }
+.nav-tab { flex: 1; border: none; padding: 8px 5px; border-radius: 10px; font-weight: 800; color: #888; background: none; text-transform: uppercase; font-size: 0.7rem; letter-spacing: 0.5px; transition: 0.3s; }
 .nav-tab.active { background: white; color: var(--olive); box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
 
-#canvas-container { height: 42vh; background: #222; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center; touch-action: none; flex-shrink: 0; }
+#canvas-container { height: 52vh; background: #222; position: relative; overflow: hidden; display: flex; align-items: center; justify-content: center; touch-action: none; flex-shrink: 0; }
 #garden-img { max-width: 100%; max-height: 100%; object-fit: contain; pointer-events: none; z-index: 100; opacity: 0.9; }
 #grid-svg { position: absolute; inset: 0; pointer-events: none; z-index: 600; width: 100%; height: 100%; display: none; }
 #grid-svg.active { display: block; }
@@ -36,10 +36,10 @@ header { background: var(--white); padding: 12px; border-bottom: 1px solid #ddd;
 .view { flex: 1; display: none; overflow-y: auto; padding-bottom: 40px; -webkit-overflow-scrolling: touch; }
 .view.active { display: flex; flex-direction: column; }
 
-.care-toolbar { display: flex; gap: 8px; padding: 10px 15px; background: var(--white); border-bottom: 1px solid #eee; }
-.care-btn { flex: 1; border: none; border-radius: 14px; padding: 12px; color: white; font-weight: bold; font-size: 0.75rem; display: flex; align-items: center; justify-content: center; gap: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+.care-toolbar { display: flex; gap: 8px; padding: 6px 12px; background: var(--white); border-bottom: 1px solid #eee; }
+.care-btn { flex: 1; border: none; border-radius: 12px; padding: 8px; color: white; font-weight: bold; font-size: 0.75rem; display: flex; align-items: center; justify-content: center; gap: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
 
-.overlay-btn { background: rgba(255, 255, 255, 0.95); color: #333; border: none; padding: 8px 16px; border-radius: 16px; font-weight: 800; font-size: 0.75rem; box-shadow: 0 4px 10px rgba(0,0,0,0.2); cursor: pointer; transition: 0.2s; display: flex; align-items: center; gap: 6px; }
+.overlay-btn { background: rgba(255, 255, 255, 0.95); color: #333; border: none; padding: 6px 12px; border-radius: 14px; font-weight: 800; font-size: 0.7rem; box-shadow: 0 4px 10px rgba(0,0,0,0.2); cursor: pointer; transition: 0.2s; display: flex; align-items: center; gap: 4px; }
 .overlay-btn:active { transform: scale(0.95); background: #eee; }
 
 .item-card { background: white; padding: 12px; border-radius: 18px; margin: 8px 15px; display: flex; align-items: center; gap: 15px; border: 1px solid #eee; box-shadow: 0 3px 8px rgba(0,0,0,0.04); transition: 0.2s; }
@@ -256,7 +256,6 @@ let curSun = 'med', curWater = 'med';
 
 let selectedColor = "rgba(45, 106, 79, 0.7)", selectedRGB = "45, 106, 79", selectedAlpha = 0.7;
 
-// --- NEW LIGHT METER VARIABLES ---
 let cameraStream = null;
 let lightLoopId = null;
 
@@ -514,8 +513,6 @@ function importData(input) {
     reader.readAsText(input.files[0]);
 }
 
-// --- NEW LIGHT METER FUNCTIONS ---
-
 function startLightMeter() {
     openMod('lightModal');
     const video = document.getElementById('cameraFeed');
@@ -550,7 +547,6 @@ function processLightFrame() {
         return;
     }
     
-    // Scale down massively for performance. We just need the average color.
     canvas.width = 64; 
     canvas.height = 64;
     const ctx = canvas.getContext('2d', { willReadFrequently: true });
@@ -566,8 +562,6 @@ function processLightFrame() {
         const r = data[i];
         const g = data[i + 1];
         const b = data[i + 2];
-        
-        // Luminance math Y = 0.299R + 0.587G + 0.114B
         const luminance = (0.299 * r) + (0.587 * g) + (0.114 * b);
         totalLuminance += luminance;
     }
