--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- PWA Setup -->
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#606C38">
 
-<link rel="apple-touch-icon" href="icons/icon-192.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/Hubbegarden/sw.js');
+  });
+}
+</script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
